# ch.grischamedia.inventree.bulkproducts

./: .gitignore  README.md  pyproject.toml
bulkproducts/: __init__.py  core.py  plugin.py  urls.py  version.py  views.py
bulkproducts/static/bulkproducts/bulkproducts/: script.js  style.css
bulkproducts/templates/bulkproducts/: bulk_products.html
